--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Data Sai-ens
+title: The Sai-entist
+author: Sai Pranav Uppati
 email: uppatispr@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A space to share elegant and useful solutions to society's digital challenges and problems.
