--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  uppatispr
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
 
