--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: The Sai-entist
 author: Sai Pranav Uppati
 email: uppatispr@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A space to share elegant and useful solutions to society's digital challenges and problems.
+  A space to share ideas and solutions to improve society's daily experience in the digital age.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: heisenblock
