--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,15 @@
 # in the templates via {{ site.myvariable }}.
 title: The Sai-entist
 author: Sai Pranav Uppati
-email: uppatispr@gmail.com
+email: therealsaientist@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A space to share ideas and solutions to improve society's daily experience in the digital age.
+  A space to share ideas and solutions to enhance society's experience in the digital age.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: heisenblock
 github_username:  uppatispr
+linkedin_username: saiuppati
+instagram_username: inprince
 
 # Build settings
 markdown: kramdown
