--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   A space to share ideas and solutions to enhance society's experience in the digital age.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: heisenblock
-github_username:  uppatispr
+twitter_username: thesaientist
+github_username:  thesaientist
 linkedin_username: saiuppati
 instagram_username: inprince
 
