Change theme to Minimal Mistakes; need to setup to get it fully working

--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,11 @@ instagram_username: inprince
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
+remote_theme: "mmistakes/minimal-mistakes@4.19.2"
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
