Add GitHub repo for site; fix warning about GitHub metadata when serving site locally

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Sai Pranav Uppati"
 description              : "A space to share ideas and solutions to enhance society's experience in the digital age."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "thesaientist/thesaientist.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -67,6 +67,9 @@ google_site_verification :
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
+
+# for github warning
+github: [metadata]
 
 # Social Sharing
 twitter:
